# diskpp

./: .clang-format  .gitignore  CMakeLists.txt  hho_nl.hpp
apps/: CMakeLists.txt
apps/Cahn_Hilliard_mixte/: CH_mixte.cpp  CH_mixte_solver.hpp  CMakeLists.txt
apps/Cahn_Hilliard_mixte/NewtonSolver/: newton_solver.hpp  newton_step.hpp
apps/LerayLions/: LerayLions.cpp  LerayLions_elementary_computation.hpp  LerayLions_solver.hpp  LerayLions_test_convergence_rates.cpp  Parameters.hpp
apps/LerayLions/NewtonSolver/: newton_solver.hpp  newton_step.hpp
apps/bingham/: bingham_vector_higher_solver.hpp
apps/contact/: common.hpp  signorini_hierarchical_newton.cpp  signorini_newton.cpp
apps/diffusion/: CMakeLists.txt  diffusion.cpp  diffusion_hho.cpp  diffusion_low_grad_vector.cpp  diffusion_solver.hpp  diffusion_test.cpp  diffusion_test_convergence_rates.cpp  variable_diffusion_hho.cpp
apps/diffusion2/: CMakeLists.txt  diffusion2.cpp  diffusion2_solver.hpp  diffusion2_test.cpp  diffusion2_test_convergence_rates.cpp
apps/elasticity/: elasticity.cpp  elasticity.hpp
apps/example_visualisation/: CMakeLists.txt  example_visualisation.cpp  example_visualisation_solver.hpp
apps/exemple_visualisation/: exemple_visualisation.cpp  exemple_visualisation_solver.hpp
apps/exemple_visualisation/visualisation/: gmshConvertMesh.hpp  gmshConvertMeshGeneric.hpp  gmshConvertMeshHexahedral.hpp  gmshConvertMeshSimplicial.hpp  gmshData.cpp  gmshData.h  gmshDeformed.hpp  gmshDisk.h  gmshDisk.hpp  gmshElement.cpp  gmshMesh.cpp  gmshMesh.h  gmshMesh.hpp
apps/finite_strains/: finite_strains.cpp  finite_strains_solver.hpp
apps/finite_strains/NewtonSolver/: newton_step.hpp
apps/hyperelasticity/: BoundaryConditions.hpp  CMakeLists.txt  ElasticityParameters.hpp  Informations.hpp  Parameters.hpp  hyperelasticity.cpp  hyperelasticity_elementary_computation.hpp  hyperelasticity_solver.hpp  hyperelasticity_test_annulus.cpp  hyperelasticity_test_aurrichio.cpp  hyperelasticity_test_block.cpp  hyperelasticity_test_convergence_2d.cpp  hyperelasticity_test_convergence_3d.cpp  hyperelasticity_test_convergence_rates.cpp  hyperelasticity_test_cook.cpp  hyperelasticity_test_locking_2d.cpp  hyperelasticity_test_stab_2d.cpp
apps/hyperelasticity/NewtonSolver/: newton_solver.hpp  newton_step.hpp
apps/hyperelasticity/meshes/: anneau_1.medit2d  anneau_2.medit2d  anneau_3.medit2d  (+7 more)
apps/hyperelasticity2/: BoundaryConditions.hpp  CMakeLists.txt  ElasticityParameters.hpp  Informations.hpp  Parameters.hpp  hyperelasticity2.cpp  hyperelasticity2_elementary_computation.hpp  hyperelasticity2_solver.hpp  hyperelasticity2_test_aurrichio.cpp  hyperelasticity2_test_convergence_rates.cpp  hyperelasticity2_test_cook.cpp  hyperelasticity2_test_locking_2d.cpp  hyperelasticity2_test_stab_2d.cpp
apps/linear_elasticity/: linear_elasticity.cpp  linear_elasticity_solver.hpp  linear_elasticity_test.cpp
apps/netgensalome2netgen/: CMakeLists.txt  netgensalome2netgen.cpp
apps/nonlinear_diffusion/: CMakeLists.txt  hho_nl_diffusion.hpp  nonlinear_diffusion.cpp  nonlinear_diffusion_solver.hpp
apps/nonlinear_elasticity/: CMakeLists.txt  NL_elasticity.cpp  NL_elasticity_solver.hpp  hho_nl.hpp
apps/nonlinear_laplacian/: CMakeLists.txt  NL_laplacian.cpp  NL_laplacian_solver.hpp
apps/nonlinear_solid_mechanics/: CMakeLists.txt  contact_test.cpp  elasticity_test.cpp  elastodynamic_test.cpp
apps/pLaplace/: CMakeLists.txt  pLaplace.cpp  pLaplaceParameters.hpp  pLaplace_elementary_computation.hpp  pLaplace_solver.hpp
apps/plasticity/: plasticity_solver.hpp
apps/poisson_solver/: poisson_solver.cpp
apps/test_laws/: CMakeLists.txt  test_law.cpp  test_maths_deformations.hpp  test_plaplace.hpp  test_tm_prod.hpp
apps/tests/: CMakeLists.txt  behaviors_test.cpp  divide_polygons.cpp  test_eigen.cpp  test_gradient.cpp  test_maths_deformations.hpp  test_plaplace.hpp  test_tm_prod.hpp  vector_stabilization.cpp  verify.h
apps/tresca/: CMakeLists.txt  Informations.hpp  Parameters.hpp  tresca.cpp  tresca_solver.hpp  tresca_test.cpp
apps/vector_laplacian/: CMakeLists.txt  vector_laplacian.cpp  vector_laplacian_solver.hpp  vector_laplacian_test.cpp  vector_laplacian_test_convergence_rates.cpp
apps/vector_laplacian2/: .vector_laplacian2_test_convergence_rates.cpp.kate-swp  vector_laplacian2.cpp  vector_laplacian2_solver.hpp  vector_laplacian2_test_convergence_rates.cpp
apps/vector_laplacian3/: CMakeLists.txt  vector_laplacian3.cpp  vector_laplacian3_solver.hpp  vector_laplacian3_test_conditioning.cpp  vector_laplacian3_test_convergence_rates.cpp
apps/viscoplasticity/: viscoplasticity_solver.hpp
utils/: CMakeLists.txt  salomeConverter.cpp  testmesh-128-128.quad  testmesh-64-64.quad
(+163 files in other folders)
