add_subdirectory(mesh_basic_tests)
add_subdirectory(diffusion)
#add_subdirectory(nonlinear_diffusion)
add_subdirectory(nonlinear_elasticity)
add_subdirectory(timing_test)
#add_subdirectory(parallel_diffusion)
#add_subdirectory(app_template)
#add_subdirectory(fvca2netgen)
add_subdirectory(elasticity)
add_subdirectory(exemple_visualisation)
#add_subdirectory(fvca5_meshinfo)
