#add_subdirectory(mesh_basic_tests)
#add_subdirectory(diffusion)
add_subdirectory(hyperelasticity)
#add_subdirectory(timing_test)
#add_subdirectory(parallel_diffusion)
#add_subdirectory(app_template)
#add_subdirectory(fvca2netgen)
#add_subdirectory(linear_elasticity)
#add_subdirectory(vector_laplacian)
#add_subdirectory(test_laws)
#add_subdirectory(pLaplace)
#add_subdirectory(exemple_visualisation)
#add_subdirectory(fvca5_meshinfo)
